# tonepi

./: .gitignore  README.md  config.example.yaml  pyproject.toml
deploy/systemd/: qcii.service
scripts/: install-debian.sh  run-qcii-service.sh  run-qcii.sh
src/qcii_detector/: __init__.py  audio.py  audio_devices.py  cli.py  config.py  detect.py  gpio_output.py  logging_utils.py  service.py  synth.py  systemd_service.py  tones.py  tui.py
tests/: test_detect.py
